pose slam added

--- a/06_localization/06_localization.qmd
+++ b/06_localization/06_localization.qmd
@@ -32,3 +32,4 @@ revealjs-plugins:
 {{< include contents/_localizingmap.qmd >}}
 {{< include contents/_creatingmap.qmd >}}
 {{< include contents/_localize_and_map.qmd >}}
+{{< include contents/_poseslam.qmd >}}
