--- a/06_localization/contents/_deadreckoning.qmd
+++ b/06_localization/contents/_deadreckoning.qmd
@@ -177,9 +177,9 @@ the right.
 the uncertainties between the corresponding variables are related.
   - For example, the value $P_{1,3}=P_{3,1} = -0.5575$ indicats the
     uncertainties in $x$ and $\theta$ are related.
-* The total uncertaintly is given by $\sqrt{\det{(\hat{\bm{P}})}} and is
+* The total uncertainty is given by $\sqrt{\det{(\hat{\bm{P}})}}$ and is
 plotted.
-  - It never decreases b/c RHS of the $\hat{\bm{P}}$ eqn. is positive definite.
+  - It never decreases because RHS of the $\hat{\bm{P}}$ eqn. is positive definite.
   - Means that $\bm{P}$, the position uncertainty can never decrease!
 :::
 
