localization slides appended with complementary filter

--- a/06_localization/06_localization.qmd
+++ b/06_localization/06_localization.qmd
@@ -33,3 +33,4 @@ revealjs-plugins:
 {{< include contents/_creatingmap.qmd >}}
 {{< include contents/_localize_and_map.qmd >}}
 {{< include contents/_poseslam.qmd >}}
+{{< include contents/_complementary.qmd >}}
