all lectures are in

--- a/07_robot_arm_kinematics/07_robot_arm_kinematics.qmd
+++ b/07_robot_arm_kinematics/07_robot_arm_kinematics.qmd
@@ -28,3 +28,5 @@ revealjs-plugins:
 
 {{< include contents/_frontmatter.qmd >}}
 {{< include contents/_forward_kinematics.qmd >}}
+{{< include contents/_jacobian.qmd >}}
+{{< include contents/_inverse_kinematics.qmd >}}
