--- a/02_rigid_motions/contents/_two_dimensions.qmd
+++ b/02_rigid_motions/contents/_two_dimensions.qmd
@@ -6,7 +6,7 @@
 
 ::: {.column width="60%"}
 * A point is represented by its $\bm{x}$- and $\bm{y}$-coordinates $(x,y)$ or 
-as a bound vector $$ \bm{p} = x\bm{x} + y\bm{y}.$$
+as a bound vector $$ \bm{t} = x\bm{x} + y\bm{y}.$$
 
 * We wish to describe the red coordinate frame $\{B\}$ with respect to the blue 
 coordinate frame $\{A\}$.
@@ -134,10 +134,9 @@ Rotated coordinate frames in $2$D.
 
 :::: {.columns}
 
-::: {.column width="70%"}
+::: {.column width="75%"}
 * Let's account for the translation btw. the origins of $\{A\}$ and $\{B\}$.
 * Since the axes $\{V\}$ and $\{A\}$ are parallel, we can add
-
 $$
 \begin{aligned}
 \begin{pmatrix}
@@ -162,7 +161,7 @@ x \\ y
 c_\theta & -s_\theta & x \\ s_\theta & c_\theta & y
 \end{bmatrix}
 \begin{pmatrix}
-x_b \\ y_b
+x_b \\ y_b \\ 1
 \end{pmatrix}
 \end{aligned}
 $$
@@ -180,7 +179,7 @@ x_b \\ y_b \\ 1
 \end{pmatrix}.
 $$
 
-* This representation is called the __homogeneous representation__ and we write:
+* This is called the __homogeneous representation__ and we write:
 $$ 
 {^A}\bm{p} = 
 \begin{bmatrix}
@@ -191,7 +190,7 @@ $$
 
 :::
 
-::: {.column width="30%"}
+::: {.column width="25%"}
 <img src="contents/assets/fig2_6.svg" width="500" heigth="500" />
 
 <img src="contents/assets/fig2_7.svg" width="500" heigth="500" />
